--- a/app/design/frontend/base/default/layout/kraken.xml
+++ b/app/design/frontend/base/default/layout/kraken.xml
@@ -3,9 +3,13 @@
 <layout>
     <catalog_product_view>
         <reference name="head">
-            <action method="addJs"><script>kraken/jquery.js</script></action>
-            <action method="addJs"><script>kraken/async.js</script></action>
-            <action method="addJs"><script>kraken/optimize.v2.min.js</script></action>
+            <action method="addJs" ifconfig="welance_kraken/kraken_config/add_jquery"><script>kraken/jquery.js</script></action>
+            <action method="addJs">
+                <script>kraken/async.js</script>
+            </action>
+            <action method="addJs">
+                <script>kraken/optimize.v2.min.js</script>
+            </action>
         </reference>
         <reference name="before_body_end">
             <block type="welance_kraken/product_image" name="welance.kraken.cache.optimizer" as="cacheOptimizer" template="kraken/product/image.phtml" />
